--- a/finpal-spring/finpal-project/build.gradle
+++ b/finpal-spring/finpal-project/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -35,6 +36,7 @@ dependencies {
 	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.google.firebase:firebase-admin:8.0.1'
 }
 
 tasks.named('test') {
